# vector-drawer

./: CMakeLists.txt
lib/gl/: CMakeLists.txt  gl.h
lib/gl/extensions/simple-drawer/: axes.h  drawing-manager.cpp  drawing-manager.h  rect.h  simple-drawing-renderer.h  simple-window.h
lib/gl/math/: CMakeLists.txt  colored-vertex.h  math-utils.h  vec.h
lib/gl/wrappers/setup/: opengl-setup.cpp  opengl-setup.h
res/: gradient.glsl
src/: CMakeLists.txt  vector-drawer.cpp
